--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "gatsby": "^4.4.0",
+    "gatsby-source-contentful": "^7.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
